<resources>
    <string name="app_name">LogIn Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="remember">Remember me</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="app_logo">logo</string>
    <string name="or">OR</string>
</resources>